# dozer-samples

./: .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  dozer-config.yaml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml
client-samples/ingest-python-sample/: Dozer Polars Dataframe Ingestion using Arrow.ipynb  README.md  dozer-config.yaml  pyproject.toml  query.py  requirements.txt  sample.py  trips.json
community-samples/: README.md
community-samples/dozlog/: LICENSE  README.md  package-lock.json  package.json
community-samples/html-crypto-price-picker/: LICENSE  README.md  dozer-config.yaml  index.html
connectors/aws-s3/: README.md  create_dataset_and_upload_to_s3.py  dozer-config.cloud.yaml  dozer-config.yaml  env.sample
connectors/ethereum/: README.md  dozer-config.yml
connectors/grpc/: dozer-config.yaml  trips.json
connectors/javascript/: README.md  buy.js  dozer-config.yaml  ingest.js  sell.js
connectors/kafka/: README.md  docker-compose.yml  dozer-config.yaml  producer.py
connectors/local-storage/: dozer-config.yaml
connectors/mongodb/: .env.sample  README.md  dozer-config.yaml
connectors/mysql/: .env.sample  Dockerfile  README.md  docker-compose.yml  download.sh  dozer-config.yaml  is_ready.sh
connectors/nested/: README.md  dozer-config.yaml
connectors/postgres/: .env.sample  README.md  download.sh  dozer-config.cloud.yaml  dozer-config.yaml
connectors/snowflake/: .env.sample  README.md  docker-compose.yml  dozer-config.cloud.yaml  dozer-config.yaml  env.sample.sh
connectors/supabase/: README.md  docker-compose.yml  dozer-config.cloud.yaml  dozer-config.yaml
instrument/: README.md  instrument.yaml  instrumentation.json  taxi.yaml
local-storage/: README.md  init.sh
pg-flights/: README.md  docker-compose.yml  dozer-config.yaml
postgres/: README.md  docker-compose.yml
samples-by-community/: README.md
sql/: README.md  download.sh
test/: .eslintrc.js  helper.ts
usecases/llm/: .env.sample  Dockerfile  LICENSE  README.md  app.py  chainlit.md  docker-compose.yml  dozer-config.yaml  pyproject.toml  requirements.txt
usecases/llm/data/: BankFAQs.xlsx
usecases/scaling-ecommerce/: .gitignore  README.md  aggregate-config.yaml  direct-config.yaml  docker-compose.yml  dozer-config.yaml  generate.py  half-config.yaml  join-config.yaml  load_test_grpc.sh  local-config.yaml  pyproject.toml  requirements.txt  running.md
usecases/scaling-ecommerce/prometheus/: prometheus.yml
(+309 files in other folders)
