[tool.poetry]
name = "ingest-python-sample"
version = "0.1.0"
description = "Instantly ingest Polars/Pandas dataframes using Arrow format and deploy APIs"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ingest_python_sample"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.16.8"
dozer = {git = "git@github.com:getdozer/dozer-python.git", rev = "main"}


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
