[tool.poetry]
name = "scaling-ecommerce"
version = "0.1.0"
description = ""
authors = ["VG <vivekg342@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "scaling_ecommerce"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
dbldatagen = "^0.3.4.post2"
pyspark = "^3.4.1"
pyparsing = "^3.1.0"
pyarrow = "^14.0.1"
delta-spark = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
